--- a/004_SIFT.ipynb
+++ b/004_SIFT.ipynb
@@ -63,8 +63,8 @@
     "\n",
     "        fname = \"sift_\" + str(counter) + \".png\"\n",
     "        fname_mask = \"sift_\" + str(counter) + \"mask.png\"\n",
-    "        cv2.imwrite(os.path.join(\"sift\", fname), keypoints_image)\n",
-    "        cv2.imwrite(os.path.join(\"sift\", fname_mask), mask_image)\n",
+    "        cv2.imwrite(os.path.join(\"sift_images\", fname), keypoints_image)\n",
+    "        cv2.imwrite(os.path.join(\"sift_images\", fname_mask), mask_image)\n",
     "\n",
     "    # Display the keypoints image\n",
     "\n",
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "# Path to the folder containing image files\n",
-    "folder_path = \"/home/scco0002/F&E_DeepLearning_VS/011_KOVIS_13_03_2023/dataset/dataset_no_rotation/test\"\n",
+    "folder_path = \"dataset/mini_testdatensatz_cleared/test\"\n",
     "counter = 0\n",
     "\n",
     "# Iterate through all files in the folder\n",
@@ -113,8 +113,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
