--- a/005_Segmentation_testen.ipynb
+++ b/005_Segmentation_testen.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open('/home/scco0002/F&E_DeepLearning_VS/011_KOVIS_20_03_2023/dataset/dataset_no_rotation/train/picture_1.png')\n",
+    "img = Image.open('dataset/mini_testdatensatz_cleared/train/picture_1.png')\n",
     "im_size= [192,192]\n",
     "img_resized = img_patch(img, im_size)\n",
     "img_resized = np.array(img_resized) # 8076"
@@ -73,7 +73,7 @@
     "board_mask[np.round(new_y).astype(int), np.round(new_x).astype(int)] = 1\n",
     "board_mask_image = Image.fromarray(board_mask)\n",
     "\n",
-    "plt.imsave(\"Segmentation_mask_tests/board_mask.jpg\", board_mask_image)"
+    "plt.imsave(\"analyse_segmentation/board_mask.jpg\", board_mask_image)"
    ]
   },
   {
@@ -169,7 +169,7 @@
     "\n",
     "plug_mask_image = Image.fromarray(plug_mask)\n",
     "\n",
-    "plt.imsave(\"Segmentation_mask_tests/plug_mask.jpg\", plug_mask_image)"
+    "plt.imsave(\"analyse_segmentation/plug_mask.jpg\", plug_mask_image)"
    ]
   },
   {
@@ -224,8 +224,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
