--- a/006_Segmentation_new.ipynb
+++ b/006_Segmentation_new.ipynb
@@ -6,8 +6,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "\n",
-    "\n"
+    "class KMeans:\n",
+    "    def __init__(self, n_clusters, max_iter=100):\n",
+    "        self.n_clusters = n_clusters\n",
+    "        self.max_iter = max_iter\n",
+    "    \n",
+    "    def fit(self, X):\n",
+    "        # Initialize cluster centers randomly\n",
+    "        self.centers = X[torch.randperm(X.shape[0])[:self.n_clusters]]\n",
+    "        \n",
+    "        for i in range(self.max_iter):\n",
+    "            # Assign each point to the nearest cluster center\n",
+    "            distances = torch.cdist(X, self.centers)\n",
+    "            labels = torch.argmin(distances, dim=1)\n",
+    "            \n",
+    "            # Update cluster centers as the mean of the assigned points\n",
+    "            for j in range(self.n_clusters):\n",
+    "                mask = labels == j\n",
+    "                if mask.sum() > 0:\n",
+    "                    self.centers[j] = X[mask].mean(dim=0)\n",
+    "                    \n",
+    "    def predict(self, X):\n",
+    "        distances = torch.cdist(X, self.centers)\n",
+    "        labels = torch.argmin(distances, dim=1)\n",
+    "        return labels\n"
    ]
   },
   {
@@ -16,169 +40,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import torch\n",
+    "import torchvision.transforms as transforms\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "from train_dataset import img_patch\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "# Define the path to your dataset\n",
+    "data_path = '/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/dataset/mini_testdatensatz/train'\n",
     "\n",
-    "# Load and preprocess the images\n",
-    "datapath = 'dataset/mini_testdatensatz'\n",
-    "datapath = datapath + '/train'\n",
-    "im_size= [192,192]\n",
+    "# Define the number of clusters\n",
+    "n_clusters = 3\n",
     "\n",
+    "# Define the transform to preprocess your images\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((256, 256)),\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
     "\n",
-    "images= []\n",
+    "# Create an empty list to store your preprocessed images\n",
+    "image_list = []\n",
     "\n",
-    "filenames_train = os.listdir(datapath)\n",
+    "# Loop over your dataset and preprocess each image\n",
+    "for img_name in os.listdir(data_path):\n",
+    "    # Load the image\n",
+    "    img_path = os.path.join(data_path, img_name)\n",
+    "    img = Image.open(img_path)\n",
+    "    \n",
+    "    # Apply the transform\n",
+    "    img_tensor = transform(img)\n",
+    "    \n",
+    "    # Add the preprocessed image to the list\n",
+    "    image_list.append(img_tensor.numpy())\n",
+    "    \n",
+    "# Create a data tensor from the preprocessed images\n",
+    "data_tensor = torch.from_numpy(np.array(image_list)).float()\n",
     "\n",
+    "# Flatten the tensor to a 2D array\n",
+    "data_array = data_tensor.view(data_tensor.shape[0], -1)\n",
     "\n",
-    "for filename in filenames_train:\n",
-    "    img = Image.open(os.path.join(datapath,filename)) # Convert to grayscale\n",
-    "    img_resized = img_patch(img, im_size)\n",
-    "    img_grey = img_resized.convert('L')  # Resize the image\n",
-    "    img_numpy = np.array(img_grey) / 255.0             # Normalize the pixel values\n",
-    "    #img_reshape = img_numpy.reshape((im_size[0], im_size[1], 1))  # Add the channel dimension\n",
-    "    images.append(img_numpy)\n",
+    "# Perform K-means clustering on the flattened data\n",
+    "kmeans = KMeans(n_clusters=n_clusters)\n",
+    "kmeans.fit(data_array)\n",
     "\n",
+    "# Assign a label to each pixel based on the cluster it belongs to\n",
+    "labels = kmeans.labels_.reshape(data_tensor.shape[:2])\n",
     "\n",
-    "\n",
-    "# Convert the list of images to a NumPy array\n",
-    "images = np.array(images)\n",
-    "x_train, x_test = train_test_split(images, test_size=0.2, random_state=42)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D\n",
-    "from keras.models import Model\n",
-    "\n",
-    "# Define the input shape\n",
-    "input_img = Input(shape=(im_size[0], im_size[1], 1))\n",
-    "\n",
-    "# Define the encoder layers\n",
-    "x = Conv2D(16, (3, 3), activation='relu', padding='same')(input_img)\n",
-    "x = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
-    "x = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
-    "encoded = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "\n",
-    "# Define the decoder layers\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(encoded)\n",
-    "x = UpSampling2D((2, 2))(x)\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
-    "x = UpSampling2D((2, 2))(x)\n",
-    "x = Conv2D(16, (3, 3), activation='relu')(x)\n",
-    "x = UpSampling2D((2, 2))(x)\n",
-    "decoded = Conv2D(1, (3, 3), activation='sigmoid', padding='same')(x)\n",
-    "\n",
-    "# Define the autoencoder model\n",
-    "autoencoder = Model(input_img, decoded)\n",
-    "\n",
-    "# Compile the autoencoder model\n",
-    "autoencoder.compile(optimizer='adam', loss='binary_crossentropy')\n",
-    "\n",
-    "# Train the autoencoder model\n",
-    "autoencoder.fit(x_train, x_train,\n",
-    "                epochs=50,\n",
-    "                batch_size=20,\n",
-    "                shuffle=True,\n",
-    "                validation_data=(x_test, x_test))\n",
-    "\n",
-    "# Use the trained autoencoder to segment the input image\n",
-    "segmented_img = autoencoder.predict(input_img)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D\n",
-    "from tensorflow.keras.models import Model\n",
-    "\n",
-    "# Define a function to load and preprocess the images\n",
-    "def preprocess_images(datapath, im_size):\n",
-    "    images = []\n",
-    "    filenames_train = os.listdir(datapath)\n",
-    "\n",
-    "    for filename in filenames_train:\n",
-    "        img = Image.open(os.path.join(datapath, filename)).convert('L')  # Convert to grayscale\n",
-    "        img_resized = img.resize(im_size)  # Resize the image\n",
-    "        img_numpy = np.array(img_resized, dtype='float32') / 255.0  # Normalize the pixel values\n",
-    "        img_reshape = img_numpy.reshape((*im_size, 1))  # Add the channel dimension\n",
-    "        images.append(img_reshape)\n",
-    "\n",
-    "    # Convert the list of images to a NumPy array\n",
-    "    images = np.array(images)\n",
-    "    return images\n",
-    "\n",
-    "# Load and preprocess the training and testing images\n",
-    "datapath = 'dataset/mini_testdatensatz/train'\n",
-    "im_size = [192, 192]\n",
-    "x_train = preprocess_images(datapath, im_size)\n",
-    "datapath = 'dataset/mini_testdatensatz/test'\n",
-    "x_test = preprocess_images(datapath, im_size)\n",
-    "\n",
-    "# Define the input shape\n",
-    "input_img = Input(shape=(*im_size, 1))\n",
-    "\n",
-    "# Define the encoder layers\n",
-    "x = Conv2D(16, (3, 3), activation='relu', padding='same')(input_img)\n",
-    "x = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
-    "x = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
-    "encoded = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "\n",
-    "# Define the decoder layers\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(encoded)\n",
-    "x = UpSampling2D((2, 2))(x)\n",
-    "x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
-    "x = UpSampling2D((2, 2))(x)\n",
-    "x = Conv2D(16, (3, 3), activation='relu')(x)\n",
-    "x = UpSampling2D((2, 2))(x)\n",
-    "decoded = Conv2D(1, (3, 3), activation='sigmoid', padding='same')(x)\n",
-    "\n",
-    "# Define the autoencoder model\n",
-    "autoencoder = Model(input_img, decoded)\n",
-    "\n",
-    "# Compile the autoencoder model\n",
-    "autoencoder.compile(optimizer='adam', loss='binary_crossentropy')\n",
-    "\n",
-    "# Train the autoencoder model\n",
-    "autoencoder.fit(x_train, x_train,\n",
-    "                epochs=50,\n",
-    "                batch_size=20,\n",
-    "                shuffle=True,\n",
-    "                validation_data=(x_test, x_test))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the trained autoencoder to segment a new image\n",
-    "new_image_path = 'path/to/new/image.jpg'\n",
-    "new_img = Image.open(new_image_path).convert('L')\n",
-    "new_img_resized = new_img.resize(im_size)\n",
-    "new_img_numpy = np.array(new_img_resized, dtype='float32') / 255.0\n",
-    "new_img_reshape = new_img_numpy.reshape((*im_size, 1))\n",
-    "segmented_img = autoencoder.predict(np.array([new_img_reshape]))"
+    "# Visualize the segmented image\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.imshow(labels)\n",
+    "plt.show()\n"
    ]
   }
  ],
