--- a/001b_Sam_Segmentation.ipynb
+++ b/001b_Sam_Segmentation.ipynb
@@ -45,11 +45,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'mini_testdatensatz/'\n",
+    "path = 'dataset/mini_testdatensatz'\n",
+    "path = path + '/'\n",
     "device = \"cuda\"\n",
     "default_ratio = 3.5\n",
-    "min_pixel = 12000 # für höhe 100 sehr guter wert: 12000\n",
-    "max_pixel = 24000 # für höhe 100 sehr guter wert: 24000"
+    "min_pixel = 5000 # für höhe 100 sehr guter wert: 12000\n",
+    "max_pixel = 10000 # für höhe 100 sehr guter wert: 24000"
    ]
   },
   {
@@ -66,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sam = sam_model_registry[\"default\"](checkpoint=\"sam_vit_h_4b8939.pth\")\n",
+    "sam = sam_model_registry[\"default\"](checkpoint=\"sam_model/sam_vit_h_4b8939.pth\")\n",
     "sam.to(device=device)\n",
     "mask_generator = SamAutomaticMaskGenerator(sam)"
    ]
@@ -76,7 +77,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Folder for Segementation"
+    "# Folder for Segementation\n",
+    "\n",
+    "Attention: This functions delets all segmentation images in the path, if the path contains them"
    ]
   },
   {
