--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -1,37 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "class KMeans:\n",
-    "    def __init__(self, n_clusters, max_iter=100):\n",
-    "        self.n_clusters = n_clusters\n",
-    "        self.max_iter = max_iter\n",
-    "    \n",
-    "    def fit(self, X):\n",
-    "        # Initialize cluster centers randomly\n",
-    "        self.centers = X[torch.randperm(X.shape[0])[:self.n_clusters]]\n",
-    "        \n",
-    "        for i in range(self.max_iter):\n",
-    "            # Assign each point to the nearest cluster center\n",
-    "            distances = torch.cdist(X, self.centers)\n",
-    "            labels = torch.argmin(distances, dim=1)\n",
-    "            \n",
-    "            # Update cluster centers as the mean of the assigned points\n",
-    "            for j in range(self.n_clusters):\n",
-    "                mask = labels == j\n",
-    "                if mask.sum() > 0:\n",
-    "                    self.centers[j] = X[mask].mean(dim=0)\n",
-    "                    \n",
-    "    def predict(self, X):\n",
-    "        distances = torch.cdist(X, self.centers)\n",
-    "        labels = torch.argmin(distances, dim=1)\n",
-    "        return labels\n"
+    "# Testnootbook\n"
    ]
   },
   {
@@ -40,56 +14,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import torch\n",
-    "import torchvision.transforms as transforms\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
+    "from train_dataset import img_segmention2\n",
     "\n",
-    "# Define the path to your dataset\n",
-    "data_path = '/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/dataset/mini_testdatensatz/train'\n",
-    "\n",
-    "# Define the number of clusters\n",
-    "n_clusters = 3\n",
-    "\n",
-    "# Define the transform to preprocess your images\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize((256, 256)),\n",
-    "    transforms.ToTensor()\n",
-    "])\n",
-    "\n",
-    "# Create an empty list to store your preprocessed images\n",
-    "image_list = []\n",
-    "\n",
-    "# Loop over your dataset and preprocess each image\n",
-    "for img_name in os.listdir(data_path):\n",
-    "    # Load the image\n",
-    "    img_path = os.path.join(data_path, img_name)\n",
-    "    img = Image.open(img_path)\n",
-    "    \n",
-    "    # Apply the transform\n",
-    "    img_tensor = transform(img)\n",
-    "    \n",
-    "    # Add the preprocessed image to the list\n",
-    "    image_list.append(img_tensor.numpy())\n",
-    "    \n",
-    "# Create a data tensor from the preprocessed images\n",
-    "data_tensor = torch.from_numpy(np.array(image_list)).float()\n",
-    "\n",
-    "# Flatten the tensor to a 2D array\n",
-    "data_array = data_tensor.view(data_tensor.shape[0], -1)\n",
-    "\n",
-    "# Perform K-means clustering on the flattened data\n",
-    "kmeans = KMeans(n_clusters=n_clusters)\n",
-    "kmeans.fit(data_array)\n",
-    "\n",
-    "# Assign a label to each pixel based on the cluster it belongs to\n",
-    "labels = kmeans.labels_.reshape(data_tensor.shape[:2])\n",
-    "\n",
-    "# Visualize the segmented image\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.imshow(labels)\n",
-    "plt.show()\n"
+    "im_size =[192,192]\n",
+    "mask_path = 'dataset/mini_testdatensatz/segmentation_images/picture_1.png'\n",
+    "mask_tensor, mask = img_segmention2(mask_path, im_size)"
    ]
   }
  ],
