--- a/003_NN_testen.ipynb
+++ b/003_NN_testen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trained on CPU\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"cfg/train_real_images.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +266,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testen mit Graustufen-Bildern\n",
+      "10 testing data loaded\n",
+      "checkpoint loaded.\n",
+      "testing...\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'float'.\n`np.float` was a deprecated alias for the builtin `float`. To avoid this error in existing code, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m keypoint_pos_ein_bild,keypoint_pos_alle_bilder \u001b[39m=\u001b[39m main_test()\n",
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39m# test\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtesting...\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     keypoint_pos_ein_bild,keypoint_pos_alle_bilder \u001b[39m=\u001b[39m test(loader_test)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39mreturn\u001b[39;00m keypoint_pos_ein_bild,keypoint_pos_alle_bilder\n",
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m keypoint_pos_alle_bilder\u001b[39m.\u001b[39mappend(keypoint_pos_ein_bild)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m \u001b[39m# Visualize keypoints\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m keyps \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((img\u001b[39m.\u001b[39msize(\u001b[39m2\u001b[39m), img\u001b[39m.\u001b[39msize(\u001b[39m3\u001b[39m), \u001b[39m3\u001b[39m), np\u001b[39m.\u001b[39;49mfloat)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(keyp\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m     keyps \u001b[39m=\u001b[39m keyps \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mtile(transform\u001b[39m.\u001b[39mresize(keyp[j], keyps\u001b[39m.\u001b[39mshape[:\u001b[39m2\u001b[39m])[:, :, np\u001b[39m.\u001b[39mnewaxis], [\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m]) \u001b[39m*\u001b[39m \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m             np\u001b[39m.\u001b[39marray(color[j])\u001b[39m.\u001b[39mreshape(\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/__init__.py:305\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    300\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    301\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIn the future `np.\u001b[39m\u001b[39m{\u001b[39;00mattr\u001b[39m}\u001b[39;00m\u001b[39m` will be defined as the \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    302\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcorresponding NumPy scalar.\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mFutureWarning\u001b[39;00m, stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m    304\u001b[0m \u001b[39mif\u001b[39;00m attr \u001b[39min\u001b[39;00m __former_attrs__:\n\u001b[0;32m--> 305\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(__former_attrs__[attr])\n\u001b[1;32m    307\u001b[0m \u001b[39m# Importing Tester requires importing all of UnitTest which is not a\u001b[39;00m\n\u001b[1;32m    308\u001b[0m \u001b[39m# cheap import Since it is mainly used in test suits, we lazy import it\u001b[39;00m\n\u001b[1;32m    309\u001b[0m \u001b[39m# here to save on the order of 10 ms of import time for most users\u001b[39;00m\n\u001b[1;32m    310\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m    311\u001b[0m \u001b[39m# The previous way Tester was imported also had a side effect of adding\u001b[39;00m\n\u001b[1;32m    312\u001b[0m \u001b[39m# the full `numpy.testing` namespace\u001b[39;00m\n\u001b[1;32m    313\u001b[0m \u001b[39mif\u001b[39;00m attr \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtesting\u001b[39m\u001b[39m'\u001b[39m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'float'.\n`np.float` was a deprecated alias for the builtin `float`. To avoid this error in existing code, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations"
+     ]
+    }
+   ],
    "source": [
     "keypoint_pos_ein_bild,keypoint_pos_alle_bilder = main_test()"
    ]
@@ -875,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
