test läuft noch nicht, training ist angepasst

--- a/003_NN_testen.ipynb
+++ b/003_NN_testen.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +160,11 @@
     "\n",
     "    keypoint_pos_alle_bilder = [] \n",
     "\n",
-    "    for i, (img,plug_mask_tensor,plug_mask) in enumerate(loader_test): # i = pictures in test folder\n",
+    "    for i, (img) in enumerate(loader_test): # i = pictures in test folder\n",
     "\n",
     "        if gpu_enabled ==True:\n",
     "            img = img.cuda()\n",
-    "            plug_mask_tensor = plug_mask_tensor.cuda()\n",
-    "\n",
+    "            # plug_mask_tensor = plug_mask_tensor.cuda()\n",
     "\n",
     "        # forward-pass\n",
     "        keypL = enc(img) # left picture\n",
@@ -178,7 +177,6 @@
     "\n",
     "        for k in range(len(keyp)): #k = die features auf jedem Bild\n",
     "        \n",
-    "\n",
     "            flat_index = np.argmax(keyp[k]) # maximum value within the array\n",
     "            y, x = np.unravel_index(flat_index, keyp[k].shape) #  position des maximums im array \n",
     "            keypoint_pos_ein_bild.append([x,y])\n",
@@ -195,22 +193,22 @@
     "        keyps = (keyps * 255).round().astype(np.uint8) \n",
     "        img_out = ((img.detach().squeeze().cpu().numpy() * 0.25) * 255 + 128).round().clip(0, 255).astype(np.uint8)\n",
     "       \n",
-    "        plug_mask = plug_mask.numpy()\n",
-    "        plug_mask = plug_mask.transpose((1, 2, 0))\n",
-    "        plug_mask = np.squeeze(plug_mask)\n",
+    "        # plug_mask = plug_mask.numpy()\n",
+    "        # plug_mask = plug_mask.transpose((1, 2, 0))\n",
+    "        # plug_mask = np.squeeze(plug_mask)\n",
     "\n",
     "        \n",
     "        if arg.num_input ==1:\n",
     "            \n",
     "            Image.fromarray(np.hstack((np.tile(img_out[:, :, None], [1, 1, 3]), keyps,np.uint8(np.tile(img_out[:, :, None], [1, 1, 3]) +0.8*keyps)))).save(os.path.join(arg.dir_base, 'test/{:04d}.png'.format(i)))\n",
-    "            Image.fromarray(np.uint8(plug_mask) * 255).save(os.path.join(arg.dir_base, 'test/{:04d}binary.png'.format(i)))\n",
+    "            # Image.fromarray(np.uint8(plug_mask) * 255).save(os.path.join(arg.dir_base, 'test/{:04d}binary.png'.format(i)))\n",
     "\n",
     "\n",
     "        else:\n",
     "            \n",
     "            img_out = img_out.transpose((1, 2, 0)) # img has the wrong shape, therefore must be reshaped\n",
     "            Image.fromarray(np.hstack((img_out, keyps,np.uint8(img_out +0.5*keyps)))).save(os.path.join(arg.dir_base, 'test/{:04d}.png'.format(i)))\n",
-    "            Image.fromarray(np.uint8(plug_mask) * 255).save(os.path.join(arg.dir_base, 'test/{:04d}binary.png'.format(i)))\n",
+    "            # Image.fromarray(np.uint8(plug_mask) * 255).save(os.path.join(arg.dir_base, 'test/{:04d}binary.png'.format(i)))\n",
     "            \n",
     "\n",
     "    return keypoint_pos_ein_bild,keypoint_pos_alle_bilder\n"
@@ -226,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +246,8 @@
     "            ds_test = DataServoStereo(arg,False,grey=False)\n",
     "\n",
     "        # load database\n",
-    "        data_param = {'shuffle': False}\n",
-    "        loader_test = loader.DataLoader(ds_test,**data_param)\n",
+    "        #data_param = {'shuffle': False}\n",
+    "        loader_test = loader.DataLoader(ds_test)\n",
     "\n",
     "\n",
     "        # load model\n",
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,21 +274,26 @@
       "Testen mit Graustufen-Bildern\n",
       "10 testing data loaded\n",
       "checkpoint loaded.\n",
-      "testing...\n"
+      "testing...\n",
+      "Error occurred while getting item picture 31.png: not enough values to unpack (expected 3, got 1)\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'numpy' has no attribute 'float'.\n`np.float` was a deprecated alias for the builtin `float`. To avoid this error in existing code, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations",
+     "ename": "TypeError",
+     "evalue": "default_collate: batch must contain tensors, numpy arrays, numbers, dicts or lists; found <class 'NoneType'>",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m keypoint_pos_ein_bild,keypoint_pos_alle_bilder \u001b[39m=\u001b[39m main_test()\n",
       "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39m# test\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtesting...\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     keypoint_pos_ein_bild,keypoint_pos_alle_bilder \u001b[39m=\u001b[39m test(loader_test)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39mreturn\u001b[39;00m keypoint_pos_ein_bild,keypoint_pos_alle_bilder\n",
-      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m keypoint_pos_alle_bilder\u001b[39m.\u001b[39mappend(keypoint_pos_ein_bild)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m \u001b[39m# Visualize keypoints\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m keyps \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((img\u001b[39m.\u001b[39msize(\u001b[39m2\u001b[39m), img\u001b[39m.\u001b[39msize(\u001b[39m3\u001b[39m), \u001b[39m3\u001b[39m), np\u001b[39m.\u001b[39;49mfloat)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(keyp\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m     keyps \u001b[39m=\u001b[39m keyps \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mtile(transform\u001b[39m.\u001b[39mresize(keyp[j], keyps\u001b[39m.\u001b[39mshape[:\u001b[39m2\u001b[39m])[:, :, np\u001b[39m.\u001b[39mnewaxis], [\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m]) \u001b[39m*\u001b[39m \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m             np\u001b[39m.\u001b[39marray(color[j])\u001b[39m.\u001b[39mreshape(\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/__init__.py:305\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    300\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    301\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIn the future `np.\u001b[39m\u001b[39m{\u001b[39;00mattr\u001b[39m}\u001b[39;00m\u001b[39m` will be defined as the \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    302\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcorresponding NumPy scalar.\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mFutureWarning\u001b[39;00m, stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m    304\u001b[0m \u001b[39mif\u001b[39;00m attr \u001b[39min\u001b[39;00m __former_attrs__:\n\u001b[0;32m--> 305\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(__former_attrs__[attr])\n\u001b[1;32m    307\u001b[0m \u001b[39m# Importing Tester requires importing all of UnitTest which is not a\u001b[39;00m\n\u001b[1;32m    308\u001b[0m \u001b[39m# cheap import Since it is mainly used in test suits, we lazy import it\u001b[39;00m\n\u001b[1;32m    309\u001b[0m \u001b[39m# here to save on the order of 10 ms of import time for most users\u001b[39;00m\n\u001b[1;32m    310\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m    311\u001b[0m \u001b[39m# The previous way Tester was imported also had a side effect of adding\u001b[39;00m\n\u001b[1;32m    312\u001b[0m \u001b[39m# the full `numpy.testing` namespace\u001b[39;00m\n\u001b[1;32m    313\u001b[0m \u001b[39mif\u001b[39;00m attr \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtesting\u001b[39m\u001b[39m'\u001b[39m:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'float'.\n`np.float` was a deprecated alias for the builtin `float`. To avoid this error in existing code, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations"
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb Cell 15\u001b[0m in \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m color \u001b[39m=\u001b[39m yaml\u001b[39m.\u001b[39mload(\u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mcfg/color.yaml\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m), Loader\u001b[39m=\u001b[39myaml\u001b[39m.\u001b[39mLoader)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m keypoint_pos_alle_bilder \u001b[39m=\u001b[39m [] \n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, (img) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(loader_test): \u001b[39m# i = pictures in test folder\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mif\u001b[39;00m gpu_enabled \u001b[39m==\u001b[39m\u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/003_NN_testen.ipynb#X20sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         img \u001b[39m=\u001b[39m img\u001b[39m.\u001b[39mcuda()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/dataloader.py:634\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    631\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    632\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    633\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 634\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    635\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    636\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    637\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    638\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/dataloader.py:678\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    676\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    677\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 678\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    679\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[1;32m    680\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/_utils/fetch.py:54\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n\u001b[0;32m---> 54\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcollate_fn(data)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/_utils/collate.py:264\u001b[0m, in \u001b[0;36mdefault_collate\u001b[0;34m(batch)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdefault_collate\u001b[39m(batch):\n\u001b[1;32m    204\u001b[0m     \u001b[39mr\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    205\u001b[0m \u001b[39m        Function that takes in a batch of data and puts the elements within the batch\u001b[39;00m\n\u001b[1;32m    206\u001b[0m \u001b[39m        into a tensor with an additional outer dimension - batch size. The exact output type can be\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    262\u001b[0m \u001b[39m            >>> default_collate(batch)  # Handle `CustomType` automatically\u001b[39;00m\n\u001b[1;32m    263\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 264\u001b[0m     \u001b[39mreturn\u001b[39;00m collate(batch, collate_fn_map\u001b[39m=\u001b[39;49mdefault_collate_fn_map)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/_utils/collate.py:150\u001b[0m, in \u001b[0;36mcollate\u001b[0;34m(batch, collate_fn_map)\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m    147\u001b[0m             \u001b[39m# The sequence type may not support `__init__(iterable)` (e.g., `range`).\u001b[39;00m\n\u001b[1;32m    148\u001b[0m             \u001b[39mreturn\u001b[39;00m [collate(samples, collate_fn_map\u001b[39m=\u001b[39mcollate_fn_map) \u001b[39mfor\u001b[39;00m samples \u001b[39min\u001b[39;00m transposed]\n\u001b[0;32m--> 150\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(default_collate_err_msg_format\u001b[39m.\u001b[39mformat(elem_type))\n",
+      "\u001b[0;31mTypeError\u001b[0m: default_collate: batch must contain tensors, numpy arrays, numbers, dicts or lists; found <class 'NoneType'>"
      ]
     }
    ],
