--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -129,6 +129,37 @@
     "mask = img_segmention2(mask_path)\n",
     "display(mask)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Create a 3D numpy array with shape (height, width, channels) representing an RGB image\n",
+    "img = np.zeros((50, 50, 3)) # Set all values to 0 initially\n",
+    "img[10:20, 20:30, :] = [0, 0, 255] # Set a region of the image to red\n",
+    "\n",
+    "# Create a 2D numpy array with shape (height, width) representing a binary mask\n",
+    "mask = np.zeros((50, 50)) # Set all values to 0 initially\n",
+    "mask[10:25, 20:30] = 1 # Set a rectangular region of the mask to 1\n",
+    "\n",
+    "# Check that the shapes of the arrays are the same\n",
+    "#assert img.shape[:-1] == mask.shape\n",
+    "\n",
+    "\n",
+    "# Calculate the mean of the img array for every channel, only using the values of pixels where the corresponding value in the mask array is 1\n",
+    "mean = [[],[],[]]\n",
+    "num_pixels = 0\n",
+    "for channel in range(3):\n",
+    "    values = img[:,:,channel][mask == 1] # Get the values of pixels where the mask is 1 for the current channel\n",
+    "    mean[channel] = np.mean(values) if len(values) > 0 else 0 # Calculate the mean of the values if there are any\n",
+    "    num_pixels += len(values) # Add the number of pixels with valid values to the total\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
