--- a/002_NN_tranieren.ipynb
+++ b/002_NN_tranieren.ipynb
@@ -360,42 +360,357 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/24 [00:00<?, ?it/s]"
+      "  0%|          | 0/24 [00:08<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 0, loss_C loss_I: 0.28758 0.07983 \n"
+      "ep: 0, loss_C loss_I: 0.35768 0.00359 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▍         | 1/24 [00:50<18:46, 48.97s/it]"
+      "  4%|▍         | 1/24 [09:26<3:33:18, 556.44s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 1, loss_C loss_I: 0.00028 0.02690 \n"
+      "ep: 1, loss_C loss_I: 0.00443 0.00298 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  8%|▊         | 2/24 [01:41<18:23, 50.17s/it]"
+      "  8%|▊         | 2/24 [18:16<3:18:36, 541.64s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 2, loss_C loss_I: 0.00012 0.01474 \n"
+      "ep: 2, loss_C loss_I: 0.00101 0.00266 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 12%|█▎        | 3/24 [27:00<3:06:58, 534.22s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 3, loss_C loss_I: 0.00039 0.00241 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 17%|█▋        | 4/24 [35:55<2:58:08, 534.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 4, loss_C loss_I: 0.00086 0.00220 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 21%|██        | 5/24 [45:10<2:51:21, 541.16s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 5, loss_C loss_I: 0.00042 0.00195 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▌       | 6/24 [54:02<2:41:30, 538.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 6, loss_C loss_I: 0.00011 0.00184 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|██▉       | 7/24 [1:02:45<2:31:07, 533.41s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 7, loss_C loss_I: 0.00019 0.00166 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 8/24 [1:11:19<2:20:35, 527.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 8, loss_C loss_I: 0.00005 0.00160 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███▊      | 9/24 [1:19:51<2:10:40, 522.69s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 9, loss_C loss_I: 0.00004 0.00149 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 42%|████▏     | 10/24 [1:28:27<2:01:24, 520.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 10, loss_C loss_I: 0.00010 0.00136 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 46%|████▌     | 11/24 [1:36:59<1:52:17, 518.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 11, loss_C loss_I: 0.00009 0.00134 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 12/24 [1:45:33<1:43:23, 516.95s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 12, loss_C loss_I: 0.00019 0.00126 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 54%|█████▍    | 13/24 [1:54:07<1:34:34, 515.85s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 13, loss_C loss_I: 0.00024 0.00128 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 58%|█████▊    | 14/24 [2:02:41<1:25:52, 515.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 14, loss_C loss_I: 0.00010 0.00126 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 62%|██████▎   | 15/24 [2:11:20<1:17:25, 516.14s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 15, loss_C loss_I: 0.00048 0.00126 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 16/24 [2:19:54<1:08:46, 515.81s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 16, loss_C loss_I: 0.00006 0.00126 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████   | 17/24 [2:28:35<1:00:20, 517.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 17, loss_C loss_I: 0.00005 0.00126 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 75%|███████▌  | 18/24 [2:37:08<51:36, 516.02s/it]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 18, loss_C loss_I: 0.00005 0.00126 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 79%|███████▉  | 19/24 [2:45:52<43:12, 518.48s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 19, loss_C loss_I: 0.00008 0.00125 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 83%|████████▎ | 20/24 [2:54:24<34:26, 516.59s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 20, loss_C loss_I: 0.00006 0.00125 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 88%|████████▊ | 21/24 [3:02:56<25:45, 515.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 21, loss_C loss_I: 0.00004 0.00125 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 92%|█████████▏| 22/24 [3:11:29<17:08, 514.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 22, loss_C loss_I: 0.00003 0.00124 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▌| 23/24 [3:20:02<08:33, 513.97s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ep: 23, loss_C loss_I: 0.00002 0.00124 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 24/24 [3:28:26<00:00, 521.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checkpoint saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
